--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,6 @@
 {
   "name": "stencil-icon",
-  "version": "0.0.0",
-  "description": "Stencil Icon component",
+  "description": "Stencil Icon Component",
   "authors": [
     "Mobify"
   ],
@@ -16,18 +15,23 @@
   ],
   "license": "MIT",
   "main": [
-    "src/_style.scss",
-    "src/template.dust",
-    "src/schema.js",
-    "src/ui.js"
+    "icon.dust"
   ],
   "ignore": [
     ".editorconfig",
     ".gitignore",
     "package.json",
     "Gruntfile.js",
+    "Gemfile",
+    "Gemfile.lock",
     "tests"
   ],
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "stencil-variables": "mobify/stencil-variables#*",
+    "level": ">=0.1.0",
+    "spline": "~1.0.1"
+  },
+  "devDependencies": {
+      "stencil-spec": "mobify/stencil-spec#dev"
+  }
 }
