--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stencil-icon",
   "version": "0.0.0",
-  "description": "Stencil Icon component",
+  "description": "Stencil Icon Component",
   "authors": [
     "Mobify"
   ],
@@ -14,12 +14,14 @@
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "2.0.0",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-sass": "~0.8.1",
     "grunt-contrib-watch": "^0.6.1",
     "load-grunt-tasks": "~0.4.0",
-    "mobify-code-style": "^1.1.0",
-    "phantomcss": "~0.5.0"
+    "dustjs-linkedin": "2.3.3",
+    "requirejs": "^2.1.0",
+    "adaptivejs": "~2.1.0-beta2",
+    "grunt-stencil-dust": "git+ssh://git@github.com:mobify/grunt-stencil-dust.git#master"
   }
 }
-
