--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
     "url": "http://github.com/mobify/stencil-icon.git"
   },
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "jquery": "^2.1.4"
+  },
   "devDependencies": {
+    "adaptivejs": "~2.1.0-beta2",
+    "dustjs-linkedin": "2.3.3",
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "2.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-sass": "~0.8.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-stencil-dust": "git+ssh://git@github.com:mobify/grunt-stencil-dust.git#master",
     "load-grunt-tasks": "~0.4.0",
-    "dustjs-linkedin": "2.3.3",
     "requirejs": "^2.1.0",
-    "adaptivejs": "~2.1.0-beta2",
-    "grunt-stencil-dust": "git+ssh://git@github.com:mobify/grunt-stencil-dust.git#master"
+    "requirejs-text": "^2.0.12"
   }
 }
